2002-05-22  Derek Price  <oberon@umich.edu>

	* cvs.h: Add prototype for this...
	* filesubr.c (strcat_filename_onto_homedir): new function.
	* login.c (): Use new function.

	* cvsrc.c (read_cvsrc): Use new function due to problems on VMS.
	* ignore.c (ign_setup): Ditto.
	* wrapper.c (wrap_setup): Ditto.
	(Original patch from Karsten Spang <ksp@dannet.dk>.)

2002-05-21  Larry Jones  <lawrence.jones@eds.com>

	* rcs.c (rcsbuf_getkey): Correct off-by-one error in ptr assertion
	and add a similar assertion for ptrend.
	(Reported by Rebecca Young <raygirl@cvshome.org>.)
	(rcsbuf_fill): Remove redundant code.

2002-05-20  Derek Price  <oberon@umich.edu>

	* buffer.h: New prototype for...
	* buffer.c (stdio_buffer_get_file): this new function to abstract
	access to a buffer's file descriptor.
	* client.c (auth_server): Use the new function.
	(Original patch from Jonathan Kamens <jik@kamens.brookline.ma.us>.)

2002-05-20  Derek Price  <oberon@umich.edu>

	* main.c (main): Add 2002 to the copyright years output with the
	version string.

2002-05-15  Larry Jones  <lawrence.jones@eds.com>

	* log.c (log_parse_list): Fix off-by-one error which caused
	incorrect handling of 'cvs log -wuser1,user2 foo.c' command.
	(Patch from Alexey Mahotkin <alexm@hsys.msk.ru>,
	reported by Alex Morozov <morozov@novosoft.ru>.)

2002-05-09  Larry Jones  <lawrence.jones@eds.com>

	* login.c (password_entry_operation): Get cvsroot_canonical before
	trying to read the user's password file so we have it even if the
	file doesn't exist.
	(Reported by Sarah Thompson <sthompson@fsl.noaa.gov>.)

2002-05-08  Derek Price  <oberon@umich.edu>

	* Makefile.am (cvs_SOURCES): Add options.h explicitly - since we
	stopped generating it dynamically, Automake stopped noticing it and
	including it in dists.  See TODO item #214 for notes.

2002-05-08  Derek Price  <oberon@umich.edu>

	* cvs.h: Use the HAVE_CONFIG_H define.

2002-05-07  Larry Jones  <lawrence.jones@eds.com>
